# template-python-postgres

./: .gitignore  404.html  README.md  down.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_docs.txt  start.sh
.github/workflows/: pipeline.yaml
data/: start.sql
docker/: Dockerfile  docker-compose.yml
docker/envs/: db.env.example  pgadmin.env.example  python_project.env.example
docs/: index.md
docs/source/: app.md
source/: app.py  config.py  db.py
source/app/: index.html
tests/: conftest.py  test_app.py  test_db.py
